--- a/package.yaml
+++ b/package.yaml
@@ -36,3 +36,14 @@ tests:
     dependencies:
     - aoc2019
     - HUnit
+
+  aoc2019-day2-test:
+    main:                Day2Spec.hs
+    source-dirs:         test
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - aoc2019
+      - HUnit
