--- a/package.yaml
+++ b/package.yaml
@@ -47,3 +47,14 @@ tests:
     dependencies:
       - aoc2019
       - HUnit
+
+  aoc2019-day3-test:
+    main:                Day3Spec.hs
+    source-dirs:         test
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - aoc2019
+      - HUnit
