--- a/package.yaml
+++ b/package.yaml
@@ -7,8 +7,8 @@ maintainer:          "rudykot@gmail.com"
 copyright:           "Maciej Jedwabny"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -20,7 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/mjedwabn/aoc2019#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+  - base >= 4.7 && < 5
 
 library:
   source-dirs: src
@@ -30,12 +30,12 @@ tests:
     main:                Day1Spec.hs
     source-dirs:         test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - aoc2019
-    - HUnit
+      - aoc2019
+      - HUnit
 
   aoc2019-day2-test:
     main:                Day2Spec.hs
@@ -51,6 +51,17 @@ tests:
   aoc2019-day3-test:
     main:                Day3Spec.hs
     source-dirs:         test
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - aoc2019
+      - HUnit
+
+  aoc2019-day4-test:
+    main:                 Day4Spec.hs
+    source-dirs:          test
     ghc-options:
       - -threaded
       - -rtsopts
